adds basic html upload

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,6 @@
     <body>
         <h1>Index</h1>
 
-        <a href="basic_upload_jquery.html" title="" alt="" target="_self">Basic Image Upload using jQuery</a>
+        <a href="basic_upload_html.html" title="" alt="" target="_self">Basic Image Upload using HTML</a>
     </body>
 </html>
