--- a/server/public/basic_upload_html.html
+++ b/server/public/basic_upload_html.html
@@ -9,7 +9,13 @@
         <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        <h1>Basic Upload using jQuery</h1>
+        <h1>Basic Upload using HTML</h1>
+
+        <form action="/upload_file_multipart" method="post" enctype="multipart/form-data">
+          <input type="file" name="upload" id="upload">
+          <p><input type="submit" value="Upload"></p>
+        </form>
+
 
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
         <script>window.jQuery || document.write('<script src="vendor/js/jquery-1.11.1.min.js"><\/script>')</script>
